--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -1,8 +1,10 @@
 ---
+
 import BaseHead from "../components/base-head.astro";
 import Footer from "../components/footer.astro";
 import Header from "../components/header.astro";
 
+import "../styles/global.css";
 
 const { title, description } = Astro.props;
 ---
