--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,4 +2,22 @@
 
 ---
 
-<header>header</header>
+<header class="top-0 sticky bg-white border-gray-200 border-b-[1px] h-14">
+  <div class="flex items-center mx-auto sm:px-6 lg:px-8 max-w-7xl h-full">
+    <div class="flex-1/5">
+      <a href="/" class="font-semibold text-xl">Tobi</a>
+    </div>
+    <nav class="flex-3/5">
+      <ul class="flex justify-center items-center gap-6">
+        <li>
+          <a href="/" class="hover:underline">Home</a>
+        </li>
+        <li><a href="#" class="hover:underline">About</a></li>
+        <li><a href="#" class="hover:underline">Projects</a></li>
+        <li><a href="#" class="hover:underline">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="flex-1/5 h-6">
+    </div>
+  </div>
+</header>
