--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import DefaultLayout from "../layouts/default-layout.astro";
 
 ---
 
-<DefaultLayout>
-	<h1>hllow</h1>
+<DefaultLayout title="Tobi">
+	<h1>hello world</h1>
+    
 </DefaultLayout>
