--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,4 +2,12 @@
 
 ---
 
-<footer>footer</footer>
+<footer class="border-gray-200 border-t-[1px] h-14">
+    <div class="flex justify-between items-center mx-auto sm:px-6 lg:px-8 max-w-7xl h-full">
+        <div class="flex flex-col justify-center items-start">
+            <strong><a href="/">Tobi</a></strong>
+            <span class="text-sm">© 2025 Tobi. All rights reserved.</span>
+        </div>
+        <div>1</div>
+    </div>
+</footer>
