--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -13,8 +13,10 @@ const { title, description } = Astro.props;
   <BaseHead title={title} description={description} />
   <body>
     <Header />
-    <main>
-      <slot />
+    <main class="min-h-[calc(100svh-2px-7rem)]">
+      <article class="mx-auto sm:px-6 lg:px-8 max-w-7xl">
+        <slot />
+      </article>
     </main>
     <Footer />
   </body>
