--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,8 +1,8 @@
 ---
-
+import ThemeSwitcher from "./theme-switcher.astro";
 ---
 
-<header class="top-0 sticky bg-white border-gray-200 border-b-[1px] h-14">
+<header class="header">
   <div class="flex items-center mx-auto sm:px-6 lg:px-8 max-w-7xl h-full">
     <div class="flex-1/5">
       <a href="/" class="font-semibold text-xl">Tobi</a>
@@ -18,6 +18,17 @@
       </ul>
     </nav>
     <div class="flex-1/5 h-6">
+      <ThemeSwitcher />
     </div>
   </div>
 </header>
+
+<style>
+  .header {
+    position: sticky;
+    top: 0;
+    height: 3rem;
+
+    border-bottom: 1px solid #eaeaea;
+  }
+</style>
