--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -4,7 +4,7 @@ import BaseHead from "../components/base-head.astro";
 import Footer from "../components/footer.astro";
 import Header from "../components/header.astro";
 
-import "../styles/global.css";
+import "../styles/index.css";
 
 const { title, description } = Astro.props;
 ---
