--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,7 @@
 ---
 import DefaultLayout from "../layouts/default-layout.astro";
-
-
 ---
 
 <DefaultLayout title="Tobi">
-	<h1>hello world</h1>
-    
+  <h1 class="">hello world</h1>
 </DefaultLayout>
