--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -1,5 +1,4 @@
 ---
-
 import BaseHead from "../components/base-head.astro";
 import Footer from "../components/footer.astro";
 import Header from "../components/header.astro";
@@ -19,5 +18,6 @@ const { title, description } = Astro.props;
       </article>
     </main>
     <Footer />
+    <script src="//unpkg.com/alpinejs" defer></script>
   </body>
 </html>
