--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -3,7 +3,13 @@
 }
 
 html {
-  /* font-size: 62.5%; */
-  color: var(--fgDefault);
+  font-size: 62.5%;
+}
+
+body {
   background-color: var(--bgDefault);
+  color: var(--fgDefault);
+  font-weight: 400;
+  font-size: 1.6rem;
+  font-family: "Be Vietnam Pro", sans-serif;
 }
