--- a/src/styles/_components.css
+++ b/src/styles/_components.css
@@ -1,3 +1,13 @@
-.text {
-  color: var(--fgDefault);
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: inherit;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+small {
+  font-size: 1.2rem;
 }
