--- a/src/styles/_utilities.css
+++ b/src/styles/_utilities.css
@@ -1,3 +1,51 @@
+/* Typography */
+.text {
+  color: var(--fgDefault);
+}
+.text--sm {
+  font-size: 1.4rem;
+}
+.text--md {
+  font-size: 1.6rem;
+}
+.text--lg {
+  font-size: 2rem;
+}
+.text--xl {
+  font-size: 2.4rem;
+}
+.text--xxl {
+  font-size: 3.2rem;
+}
+.text--xxxl {
+  font-size: 4.8rem;
+}
+.text--italic {
+  font-style: italic;
+}
+.text--underline {
+  text-decoration: underline;
+}
+.font--light {
+  font-weight: 300;
+}
+.font--semibold {
+  font-weight: 500;
+}
+.font--bold {
+  font-weight: 600;
+}
+
+/* Utilities */
+.px-default {
+  padding: 0 1.6rem;
+}
+@media screen and (min-width: 768px) {
+  .px-default {
+    padding: 0 2.4rem;
+  }
+}
+
 .one-line {
   overflow: hidden;
   text-overflow: ellipsis;
